# elara-assistant

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  README.md  release-please-config.json
.claude/: settings.json
.tmp/: README.md
apps/elara-nexus/backend/: README.md  pyproject.toml
apps/elara-nexus/backend/app/: main.py
apps/elara-nexus/backend/app/api/: router.py  schemas.py  utils.py
apps/elara-nexus/backend/app/core/: config.py  logging.py  middleware.py  rate_limit.py  security.py
apps/elara-nexus/backend/app/domain/: dtos.py  types.py
apps/elara-nexus/backend/app/infra/db/: models.py  session.py  types.py
apps/elara-nexus/backend/app/infra/llm/: litellm_client.py
apps/elara-nexus/backend/app/infra/telemetry/: langfuse.py
apps/elara-nexus/backend/app/repositories/: interfaces.py  sqlalchemy_repo.py
apps/elara-nexus/backend/app/services/: agent_service.py  board_service.py  chat_service.py  memory_service.py
apps/elara-nexus/backend/scripts/: check_coverage.py
apps/elara-nexus/backend/tests/: conftest.py
apps/elara-nexus/backend/tests/integration/: test_boards_tasks_api.py  test_chat_memory_api.py
apps/elara-nexus/backend/tests/smoke/: test_app_smoke.py
apps/elara-nexus/backend/tests/unit/: test_board_service_branches.py  test_db_repo_and_types.py  test_domain_types.py  test_litellm_client.py  test_memory_service.py  test_middleware.py  test_rate_limit.py
args/: README.md
context/: README.md
data/: README.md
docs/: architecture.md  contributing.md  release-process.md  security-baseline.md  testing-strategy.md  (+1 more)
(+56 files in other folders)
